# ExamSimulator

./: .gitignore  LICENSE  Pipfile  README.md  build.sh  config.json  developLog.md  developLog.txt  question.py  requirements.txt  tools.py  uiControl.py  viewer.py
.github/workflows/: python-app.yml
OtherCode/: Rename.ps1
OtherCode/PackageWizard/PackageWizard/: PackageWizard.sln
OtherCode/PackageWizard/PackageWizard/PackageWizard/: Form1.Designer.cs  Form1.cs  Form1.resx  PackageWizard.csproj  Program.cs  Tommy.cs  packages.config  toml.cs
OtherCode/PackageWizard/PackageWizard/PackageWizard/Properties/: AssemblyInfo.cs  Resources.Designer.cs  (+1 more)
OtherCode/certificate/: 0770012.pub
OtherCode/certificate/src/: certificate.py  server.py  webService.py
OtherCode/certificate/src/server/: 0000001.pem  0000001.pub  0770012.pem  0770012.pub
src/: ErrorHandler.py  Installer.nsi  Pipfile  Rename.ps1  build.cmd  build.sh  build_dev.cmd  certificate.py  config.json  embeddedServer.py  nsis.nsi  packageTools.py  pyproject.toml  question.py  removePackage.py  requirements.txt  tools.py  uiControl.py  updater.py  viewer.py
src/NSISinstaller/: nsis.nsi
src/Questions/Parasitology-final/: Rename.ps1  config.toml
src/Questions/Parasitology-snail/: config.toml
src/Questions/hematology-whitebloodcell/: config.toml
src/Questions/microbiology-mid/: config.toml
src/Questions/opd-urinesediments/: config.toml
src/Scripts/: build.cmd  build.sh
src/mainAppUpdater/: mau.py  tools.py  update.config
src/templates/: eServer.html
src/test/: config.toml
test/: config.toml
