[tool.poetry]
name = "ExamSimulator"
version = "2.5.4"
description = ""
authors = ["oxygen-TW <oxygen5307@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
Pillow = ">=8.3.2"
jinja2 = ">=2.11.3"
urllib3 = ">=1.26.5"
toml = "^0.10.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pycryptodome = "^3.11.0"
Flask = "^2.0.2"
pyinstaller = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

